sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:14: error: not found: value x
        x+=1
        ^AlgCombSort:20: error: not found: value x
    x=0
    ^