sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  val lgr = getNombreValeurs()
  var ecart = getNombreValeurs()
  var B = false
  var i = 0
  do {
    if (ecart>1){
      ecart = (ecart.toDouble / 1.3).toInt
    }
    i=0
    while (i+ecart < lgr) {
      if (plusPetit(i+ecart,i)){
        x+=1
        echange(i,i+ecart)
      }
      i+=1
    }

    x=0
  } while (B || ecart>0)
}